--- a/README.org
+++ b/README.org
@@ -2,20 +2,15 @@
 
 ** by Marc Nieper-Wißkirchen
 
-This repository hosts [[http://srfi.schemers.org/srfi-136/][SRFI 136]]: Extensible record types, a [[http://srfi.schemers.org/][Scheme Request for Implementation]].
+This repository hosts [[https://srfi.schemers.org/srfi-136/][SRFI 136]]: Extensible record types, a [[https://srfi.schemers.org/][Scheme Request for Implementation]].
 
 This SRFI is in /final/ status.
 
-The full documentation for this SRFI can be found in the [[http://srfi.schemers.org/srfi-136/srfi-136.html][SRFI Document]].
+The full documentation for this SRFI can be found in the [[https://srfi.schemers.org/srfi-136/srfi-136.html][SRFI Document]].
 
-If you'd like to participate in the discussion of this SRFI, or report issues with it, please [[http://srfi.schemers.org/srfi-136/][join the SRFI-136 mailing list]] and send your message there.
+If you'd like to participate in the discussion of this SRFI, or report issues with it, please [[shttp://srfi.schemers.org/srfi-136/][join the SRFI-136 mailing list]] and send your message there.
 
 Thank you.
 
 
 [[mailto:srfi-editors@srfi.schemers.org][The SRFI Editors]]
-
-** Notes
-
-Type =make check= to run the unit tests.  The =Makefile= as written
-assumes that the Scheme interpreter =chibi-scheme= is in your path.
