--- a/README.org
+++ b/README.org
@@ -1,16 +1,18 @@
 
+# SPDX-FileCopyrightText: 2025 Arthur A. Gleckler
+# SPDX-License-Identifier: MIT
 * SRFI 136: Extensible record types
 
 ** by Marc Nieper-Wißkirchen
 
 
 
-keywords: [[https://srfi.schemers.org/?keywords=data-structure][Data Structure]]
+keywords: [[https://srfi.schemers.org/?keywords=data-structure][Data Structure]], [[https://srfi.schemers.org/?keywords=record-type][Record Type]]
 
 This repository hosts [[https://srfi.schemers.org/srfi-136/][SRFI 136]]: Extensible record types, a [[https://srfi.schemers.org/][Scheme Request for Implementation]].
 
 This SRFI is in /final/ status.
-See also [[/srfi-237/][SRFI 237: Reconciled Records]].
+See also [[/srfi-237/][SRFI 237: R6RS Records (refined)]].
 The full documentation for this SRFI can be found in the [[https://srfi.schemers.org/srfi-136/srfi-136.html][SRFI Document]].
 
 If you'd like to participate in the discussion of this SRFI, or report issues with it, please [[https://srfi.schemers.org/srfi-136/][join the SRFI-136 mailing list]] and send your message there.
